# abb_irb4600_moveit_plugins

./: CMakeLists.txt  package.xml
abb_irb4600_40_255_kinematics/: CMakeLists.txt  abb_irb4600_40_255_moveit_ikfast_plugin_description.xml
abb_irb4600_40_255_kinematics/src/: abb_irb4600_40_255_ikfast_moveit_plugin.cpp  abb_irb4600_40_255_ikfast_solver.cpp
